# app-fastapi-

./: README.md  app.py  model.joblib  preprocessor.pkl  pyproject.toml
